@@ -491,6 +491,8 @@ int decode_jpeg_raw (unsigned char *jpeg_data, int len,
      */
     jpeg_read_header (&dinfo, TRUE);
     dinfo.raw_data_out = TRUE;
+    // TODO: Set to FALSE for some buggy implementation of JPEG ?
+    dinfo.do_fancy_upsampling = FALSE;
     dinfo.out_color_space = JCS_YCbCr;
     dinfo.dct_method = JDCT_IFAST;
     guarantee_huff_tables(&dinfo);
@@ -581,6 +583,8 @@ int decode_jpeg_raw (unsigned char *jpeg_data, int len,
         if (field > 0) {
             jpeg_read_header (&dinfo, TRUE);
             dinfo.raw_data_out = TRUE;
+            // TODO: Set to FALSE for some buggy implementation of JPEG ?
+            dinfo.do_fancy_upsampling = FALSE;
             dinfo.out_color_space = JCS_YCbCr;
             dinfo.dct_method = JDCT_IFAST;
             jpeg_start_decompress (&dinfo);
@@ -797,6 +801,8 @@ int decode_jpeg_gray_raw(unsigned char *jpeg_data, int len,
      */
     jpeg_read_header (&dinfo, TRUE);
     dinfo.raw_data_out = TRUE;
+    // TODO: Set to FALSE for some buggy implementation of JPEG ?
+    dinfo.do_fancy_upsampling = FALSE;
     dinfo.out_color_space = JCS_GRAYSCALE;
     dinfo.dct_method = JDCT_IFAST;
 
@@ -863,6 +869,8 @@ int decode_jpeg_gray_raw(unsigned char *jpeg_data, int len,
         if (field > 0) {
             jpeg_read_header (&dinfo, TRUE);
             dinfo.raw_data_out = TRUE;
+            // TODO: Set to FALSE for some buggy implementation of JPEG ?
+            dinfo.do_fancy_upsampling = FALSE;
             dinfo.out_color_space = JCS_GRAYSCALE;
             dinfo.dct_method = JDCT_IFAST;
             jpeg_start_decompress (&dinfo);
